# clifc

./: README.md  pyproject.toml
src/: requirements.txt
src/clifc/: cli.py
src/clifc/commands/: crop.py  propcheck.py
src/clifc/helpers/: directory.py
src/clifc/services/: crop_service.py  propcheck_service.py  propinject_service.py  proprename_service.py
src/clifc/services/param/inject/: ProjectAttributes.json
src/clifc/services/purge/: main.py
src/param/inject/: DisciplineAttributes.json  PropertySetRenameMapping.json  main.py
src/param/value/: main.py
src/purge/: main.py
